# Bottle-ORM

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
bottle/: Cargo.toml
bottle-orm/: Cargo.toml  README.md
bottle-orm-macro/: Cargo.toml
bottle-orm-macro/src/: derive_anyrow.rs  derive_model.rs  lib.rs  types.rs
bottle-orm/src/: any_struct.rs  database.rs  errors.rs  lib.rs  migration.rs  model.rs  pagination.rs  query_builder.rs  temporal.rs  transaction.rs  value_binding.rs
bottle-orm/tests/: simple_test.rs  soft_delete_test.rs  tuple_join_test.rs
bottle/src/: main.rs
bottle/src/database/: user.rs
