[package]
name = "bottle"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = [
	"runtime-tokio",
	"tls-native-tls",
	"any",
	"postgres",
	"mysql",
	"sqlite",
	"chrono",
] }
chrono = { version = "0.4.43", features = ["serde"] }
bottle-orm = { path = "../bottle-orm" }
tokio = { version = "1.49.0", "features" = ["full"] }
dotenvy = "0.15.7"
serde = "1.0.228"
