[package]
name = "bottle"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = [
        "runtime-tokio",
        "tls-native-tls",
        "any",
        "chrono",
        "uuid",
] }
chrono = { version = "0.4.43", features = ["serde"] }
bottle-orm = { path = "../bottle-orm" }
tokio = { version = "1.49.0", "features" = ["full"] }
dotenvy = "0.15.7"
serde = "1.0.228"
uuid = { version = "1.11", features = ["v4", "serde"] }
futures = "0.3.31"
env_logger = "0.11.8"
log = "0.4.29"
axum = "0.8.8"

serde_json = "1.0.149"
nanoid = "0.4.0"
reqwest = "0.13.1"
bcrypt = "0.18.0"
